<resources>
    <string name="app_name">BMI</string>
    <string name="bmi_height">Height (cm) :</string>
    <string name="bmi_weight">Weight (kg) :</string>
    <string name="bmi_calculate">Calculate BMI Value</string>
    <string name="bmi_result">Your BMI is : </string>
    <string name="bmi_suggestion">The suggestion is : </string>

    <!-- advice -->
    <string name="advice_light">You should eat some more!</string>
    <string name="advice_average">Nice body!</string>
    <string name="advice_heavy">You should not eat that much!</string>

    <!-- other -->
    <string name="menu_settings">Settings</string>
    <string name="advice_history">Previous result:</string>
    <string name="input_empty"></string>

    <!-- for menu-->
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="about_title">About Android BMI</string>
    <string name="about_msg">Android BMI Calculate</string>
    <string name="homepage">HomePage</string>
    <string name="homepage_add">http://android.gasolin.idv.tw/</string>
    <string name="map_open">Open in Google map</string>
    <string name="call_open">Make a Call</string>

    <!-- for Toast -->
    <string name="input_error">Please enter your data first!</string>

    <!-- for recordsArray -->
    <string-array name="records">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>24</item>
        <item>23</item>
        <item>22</item>
        <item>20</item>
    </string-array>

</resources>
